add installation instructions
