# docs/openapi2-schema.yml
@@ -214,69 +214,6 @@ paths:
       description: Get the content of the working directory as a list of files
       operationId: list-files
       summary: List Task Files
-  '/task/{uuid}/triggermq':
-    parameters:
-      - description: Unique ID of the task
-        in: path
-        name: uuid
-        required: true
-        type: string
-    post:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - description: ''
-          in: body
-          name: body
-          required: true
-          schema:
-            properties:
-              exchange:
-                description: Exchange name of the queue to send the notification
-                type: string
-                x-stoplight:
-                  id: xg999nag9st8s
-              route:
-                description: Route name of the queue to send the notification
-                type: string
-                x-stoplight:
-                  id: gpvpg1v6t9p73
-              timeout:
-                default: 60
-                description: Timeout to wait for the Task to end
-                type: integer
-                x-stoplight:
-                  id: bde0vnga2nwh5
-            type: object
-      responses:
-        '201':
-          description: (Created) given task trigger has been submitted
-          schema:
-            properties:
-              exchange:
-                description: Exchange name used to send the notification
-                type: string
-                x-stoplight:
-                  id: xg999nag9st8s
-              route:
-                description: Route name used to send the notification
-                type: string
-                x-stoplight:
-                  id: gpvpg1v6t9p73
-              timeout:
-                default: 60
-                description: Timeout used to wait for the Task to end
-                type: integer
-                x-stoplight:
-                  id: bde0vnga2nwh5
-            type: object
-      description: >-
-        Submit a new task trigger. This will send a message to the provided
-        message queue when the task end.
-      operationId: create-task-trigger
-      summary: Create Task Trigger
   '/token/{username}':
     parameters:
       - description: unique ID of the user trying to authenticate
